plans/personal_agents/manifests/envoy.yaml
static_resources:
  listeners:
    - name: reverse
      address: { socket_address: { address: 0.0.0.0, port_value: 8080 } }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: rev
                route_config:
                  name: r
                  virtual_hosts:
                    - name: gh
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: github_api
                            host_rewrite_literal: api.github.com
                http_filters:
                  # Policy is a SEPARATE filter: credential_injector does no
                  # path/method authorization of its own.
                  - name: envoy.filters.http.rbac
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                      rules:
                        action: DENY
                        policies:
                          deny_upstream_writes:
                            permissions:
                              - and_rules:
                                  rules:
                                    - not_rule:
                                        header: { name: ":method", string_match: { exact: "GET" } }
                                    - not_rule:
                                        url_path: { path: { prefix: "/repos/agentydragon-agent/" } }
                            principals:
                              - any: true
                  - name: envoy.filters.http.credential_injector
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.credential_injector.v3.CredentialInjector
                      overwrite: true
                      allow_request_without_credential: false
                      credential:
                        name: envoy.http.injected_credentials.generic
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.http.injected_credentials.generic.v3.Generic
                          credential:
                            name: gh_token
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: forward
      address: { socket_address: { address: 0.0.0.0, port_value: 8081 } }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: fwd
                http2_protocol_options: { allow_connect: true }
                upgrade_configs: [{ upgrade_type: CONNECT }]
                route_config:
                  name: fwd
                  virtual_hosts:
                    - name: c
                      domains: ["*"]
                      routes:
                        - match: { connect_matcher: {} }
                          route:
                            cluster: dfp
                            upgrade_configs:
                              - upgrade_type: CONNECT
                                connect_config: {}
                http_filters:
                  - name: envoy.filters.http.credential_injector
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.credential_injector.v3.CredentialInjector
                      overwrite: true
                      allow_request_without_credential: true
                      credential:
                        name: envoy.http.injected_credentials.generic
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.http.injected_credentials.generic.v3.Generic
                          credential:
                            name: gh_token
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: dfp
      connect_timeout: 5s
      lb_policy: CLUSTER_PROVIDED
      cluster_type:
        name: envoy.clusters.dynamic_forward_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
          dns_cache_config:
            name: dyn
            dns_lookup_family: V4_ONLY
    - name: github_api
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: github_api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address: { socket_address: { address: api.github.com, port_value: 443 } }
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: api.github.com
  secrets:
    - name: gh_token
      generic_secret:
        secret: { filename: /creds/token }
admin:
  address: { socket_address: { address: 127.0.0.1, port_value: 9901 } }
